--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
+body{
+  background: linear-gradient(180deg,black, white,black);
+}
+h1{
+  color: black;
   text-align: center;
 }
+.container{
+  width: 363px;
+  height: 70vh;
+  background: rgb(214, 191, 191);
+  margin:95px auto;
+  border-radius: 10%;
+}
+input{
+  margin: 5px 55px;
+  width: 240px;
+  padding: 7px;
+  font-size: 2em;
+  background-color: rgb(133, 101, 101);
+  border-radius: 5px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+}
+button{
+  
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  margin:5px;
+  font-size: 1em;
+  border-radius: 30%;
+  box-shadow: 2px 3px 5px black;
+}
+button:active{
+  background-color: red;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btn{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  margin-top: 20px;
 }
