--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ h1{
   margin:95px auto;
   border-radius: 10%;
 }
+/*This  is for inpiut container  */
 input{
   margin: 5px 55px;
   width: 240px;
